--- a/models/BERT4Rec.ipynb
+++ b/models/BERT4Rec.ipynb
@@ -12,13 +12,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 142,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3Vg0sx3_eDd5",
-        "outputId": "b6bd628b-26cf-4374-8e74-fce8f0881511"
+        "outputId": "f1687266-88ed-43d7-e024-00a855055db9"
       },
       "outputs": [
         {
@@ -36,13 +36,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 143,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "IatRo2Phd6_n",
-        "outputId": "5cb515f6-4c35-4ad3-a08c-997a548a3b90"
+        "outputId": "f36d185c-87aa-4977-a9b0-4cb37ed95e5d"
       },
       "outputs": [
         {
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": null,
       "metadata": {
         "id": "zaXMbpoEeB03"
       },
@@ -99,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 174,
+      "execution_count": null,
       "metadata": {
         "id": "kQr30WC2eQ8E"
       },
@@ -126,8 +126,6 @@
         "    'num_workers' : 4,\n",
         "    'val_data' : 3,\n",
         "    'delete_data' : True,\n",
-        "    'sampling' : True,\n",
-        "    'sampling_frac' : 0.3,\n",
         "}\n",
         "\n",
         "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
@@ -146,13 +144,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 168,
+      "execution_count": null,
       "metadata": {
         "id": "pwHqzLnkgf4I"
       },
       "outputs": [],
       "source": [
-        "from pandas.core.common import random_state\n",
         "class MakeSequenceDataSet():\n",
         "    \"\"\"\n",
         "    SequenceData 생성\n",
@@ -162,8 +159,6 @@
         "        self.df = pd.read_csv(os.path.join(self.config.data_path, 'user_item.csv'), index_col=0)\n",
         "        if config['delete_data']:\n",
         "            self.df = self.delete_ones()\n",
-        "        if config['sampling']:\n",
-        "            self.df = self.sampling_users()\n",
         "\n",
         "        self.item_encoder, self.item_decoder = self.generate_encoder_decoder('itemId')\n",
         "        self.user_encoder, self.user_decoder = self.generate_encoder_decoder('userId')\n",
@@ -173,25 +168,6 @@
         "        self.df['user_idx'] = self.df['userId'].apply(lambda x : self.user_encoder[x])\n",
         "        self.df = self.df.sort_values(['user_idx', 'timestamp']) # 시간에 따른 정렬\n",
         "        self.user_train, self.user_valid = self.generate_sequence_data()\n",
-        "\n",
-        "\n",
-        "    def delete_ones(self):\n",
-        "        a = self.df.groupby('userId')['itemId'].size()\n",
-        "        for i in a.index:\n",
-        "            if a[i] <= config['val_data']:\n",
-        "                del(a[i])\n",
-        "        df_ = self.df.copy()\n",
-        "        df_ = df_[df_['userId'].isin(a.index)]\n",
-        "                \n",
-        "        return df_\n",
-        "\n",
-        "\n",
-        "    def sampling_users(self):\n",
-        "        a = self.df.groupby('userId')['userId'].mean().sample(frac=config['sampling_frac'], random_state=config['random_seed'])\n",
-        "        df_ = self.df.copy()\n",
-        "        df_ = df_[df_['userId'].isin(a.index)]\n",
-        "        return df_\n",
-        "\n",
         "\n",
         "    def generate_encoder_decoder(self, col:str) -> dict:\n",
         "        '''\n",
@@ -213,6 +189,15 @@
         "        \n",
         "        return encoder, decoder\n",
         "\n",
+        "    def delete_ones(self) -> dict:\n",
+        "        a = self.df.groupby('userId')['itemId'].size()\n",
+        "        for i in a.index:\n",
+        "            if a[i] <= config['val_data']:\n",
+        "                del(a[i])\n",
+        "        df_ = self.df.copy()\n",
+        "        df_ = df_[df_['userId'].isin(a.index)]\n",
+        "                \n",
+        "        return df_\n",
         "\n",
         "    def generate_sequence_data(self) -> dict:\n",
         "        '''\n",
@@ -234,14 +219,13 @@
         "\n",
         "        return user_train, user_valid\n",
         "\n",
-        "\n",
         "    def get_train_valid_data(self):\n",
         "        return self.user_train, self.user_valid"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": null,
       "metadata": {
         "id": "iZf_2Zq9k4ix"
       },
@@ -376,7 +360,7 @@
       "metadata": {
         "id": "MeQuNUuwQOJn"
       },
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -389,7 +373,7 @@
       "metadata": {
         "id": "ihaTaFPBR4Dh"
       },
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -410,7 +394,7 @@
       "metadata": {
         "id": "PV_0pdBnf5wx"
       },
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -439,7 +423,7 @@
       "metadata": {
         "id": "yViBKzGuiXQZ"
       },
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -460,7 +444,7 @@
       "metadata": {
         "id": "u7zJ2-uOSdnR"
       },
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -474,7 +458,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 153,
+      "execution_count": null,
       "metadata": {
         "id": "KaBmHAqnoPbb"
       },
@@ -693,7 +677,7 @@
       "metadata": {
         "id": "xtf_I6wZqtsL"
       },
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -758,7 +742,7 @@
       "metadata": {
         "id": "ETNnkwbl03H3"
       },
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -785,7 +769,7 @@
       "metadata": {
         "id": "EpfARiJV1pxy"
       },
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -799,7 +783,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 175,
+      "execution_count": null,
       "metadata": {
         "id": "63fbu_6GKbbV"
       },
@@ -811,7 +795,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 176,
+      "execution_count": null,
       "metadata": {
         "id": "rpe4KS4qWybY"
       },
@@ -828,7 +812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 177,
+      "execution_count": null,
       "metadata": {
         "id": "gIIjMMm7XR_v"
       },
@@ -845,7 +829,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 178,
+      "execution_count": null,
       "metadata": {
         "id": "37s2MFEqXZil"
       },
@@ -868,36 +852,10 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "len(user_train), len(user_valid)"
-      ],
-      "metadata": {
-        "id": "tyEK3efmOqc8",
-        "outputId": "3d1687d9-5a95-45e3-bd39-f3ef74c68a43",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 179,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(10346, 10346)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 179
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 180,
       "metadata": {
         "id": "FjSWoKLmXa45",
-        "outputId": "125a450f-d425-49bc-d29d-a623ac6fd55c",
+        "outputId": "0e6da5e0-043a-415d-a2d7-3c91bfa06db8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -910,7 +868,13 @@
             "Epoch:   1| Train loss: 9.56606| NDCG@30: 0.00035| HIT@30: 0.00242: 100%|██████████| 41/41 [1:04:34<00:00, 94.50s/it]\n",
             "Epoch:   2| Train loss: 9.06309| NDCG@30: 0.00035| HIT@30: 0.00271: 100%|██████████| 41/41 [1:04:27<00:00, 94.34s/it]\n",
             "Epoch:   3| Train loss: 8.90765| NDCG@30: 0.00015| HIT@30: 0.00116: 100%|██████████| 41/41 [1:04:40<00:00, 94.65s/it]\n",
-            "Epoch:   4| Train loss: 8.84218| NDCG@30: 0.00021| HIT@30: 0.00174:  61%|██████    | 25/41 [39:27<25:15, 94.69s/it]"
+            "Epoch:   4| Train loss: 8.81685| NDCG@30: 0.00038| HIT@30: 0.00251: 100%|██████████| 41/41 [1:04:32<00:00, 94.46s/it]\n",
+            "Epoch:   5| Train loss: 8.73822| NDCG@30: 0.00033| HIT@30: 0.00261: 100%|██████████| 41/41 [1:04:06<00:00, 93.81s/it]\n",
+            "Epoch:   6| Train loss: 8.65226| NDCG@30: 0.00051| HIT@30: 0.00319: 100%|██████████| 41/41 [1:04:13<00:00, 93.98s/it]\n",
+            "Epoch:   7| Train loss: 8.56005| NDCG@30: 0.00027| HIT@30: 0.00222: 100%|██████████| 41/41 [1:04:25<00:00, 94.29s/it]\n",
+            "Epoch:   8| Train loss: 8.46921| NDCG@30: 0.00023| HIT@30: 0.00193: 100%|██████████| 41/41 [1:04:24<00:00, 94.26s/it]\n",
+            "Epoch:   9| Train loss: 8.40336| NDCG@30: 0.00032| HIT@30: 0.00232: 100%|██████████| 41/41 [1:04:33<00:00, 94.48s/it]\n",
+            "Epoch:  10| Train loss: 8.32621| NDCG@30: 0.00021| HIT@30: 0.00164: 100%|██████████| 41/41 [1:04:34<00:00, 94.51s/it]\n"
           ]
         }
       ],
@@ -984,7 +948,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNheSXAtJ0EZVGMy0Y59hYc",
+      "authorship_tag": "ABX9TyNT6fCm2pfNgnOW9RTt6Ed4",
       "include_colab_link": true
     },
     "gpuClass": "premium",
