--- a/models/BERT4Rec.ipynb
+++ b/models/BERT4Rec.ipynb
@@ -900,11 +900,11 @@
       "execution_count": 22,
       "metadata": {
         "id": "-IYFTapfXcvb",
-        "outputId": "6921ef12-bbe1-42b8-e85c-22eab4a5ac5c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "6921ef12-bbe1-42b8-e85c-22eab4a5ac5c"
       },
       "outputs": [
         {
@@ -935,15 +935,63 @@
         "\n",
         "ax[2].plot(epochs, hit_list)\n",
         "ax[2].set_title('HIT')\n",
-        "plt.show()\n",
-        "     "
+        "plt.show()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import csv\n",
+        "hili=[]\n",
+        "for i in hit_list:\n",
+        "    hili.append([i])\n",
+        "\n",
+        "with open('bert4rec_hit.csv','w') as f:\n",
+        "    write = csv.writer(f)\n",
+        "    write.writerows(hili)"
+      ],
       "metadata": {
         "id": "OyMFO1vQTbf6"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 6. 모델 저장"
+      ],
+      "metadata": {
+        "id": "tMs0fFNj7Ohq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.save(model, 'bert_model.h5')"
+      ],
+      "metadata": {
+        "id": "UOCGNSOwawip"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 7. 모델 불러오기"
+      ],
+      "metadata": {
+        "id": "AF9S2rdy7dH0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = torch.load('bert_model.h5')"
+      ],
+      "metadata": {
+        "id": "6B4lv6Kk6sSC"
       },
       "execution_count": null,
       "outputs": []
@@ -953,7 +1001,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNtCp98kMmSIPquj90820BQ",
+      "authorship_tag": "ABX9TyNxJH0xyISeX5JqVxcu2L2J",
       "include_colab_link": true
     },
     "gpuClass": "premium",
