each user valid

--- a/models/BERT4Rec.ipynb
+++ b/models/BERT4Rec.ipynb
@@ -896,13 +896,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 6. 시각화"
+      ],
+      "metadata": {
+        "id": "0ZWjpy4B9029"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 22,
       "metadata": {
         "id": "-IYFTapfXcvb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 336
+          "height": 259
         },
         "outputId": "6921ef12-bbe1-42b8-e85c-22eab4a5ac5c"
       },
@@ -957,9 +966,240 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "u = 121"
+      ],
+      "metadata": {
+        "id": "mRpelMm_afL5"
+      },
+      "execution_count": 95,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "user_train[u]"
+      ],
+      "metadata": {
+        "id": "zcyxWb46LibP",
+        "outputId": "38fb17da-8cda-486c-c6a3-e416141c914f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[4673, 2817, 4674, 4675, 4676, 4677, 2391, 4678, 4679, 4680]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 96
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(len(user_train[u])):\n",
+        "    print(make_sequence_dataset.item_decoder[user_train[u][i]])"
+      ],
+      "metadata": {
+        "id": "VYvJ53Dec5o2",
+        "outputId": "427b95cb-fc37-49fe-caac-54cbbec15d85",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "44183\n",
+            "7548\n",
+            "26966\n",
+            "59734\n",
+            "57736\n",
+            "58820\n",
+            "40640\n",
+            "6771\n",
+            "7693\n",
+            "3279\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "user_valid[u]"
+      ],
+      "metadata": {
+        "id": "yzKq1DyjL7J1",
+        "outputId": "f1fae1ae-d810-4fcd-bf9c-0d4a07ec1c9b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[4681, 4682, 408]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 97
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(len(user_valid[u])):\n",
+        "    print(make_sequence_dataset.item_decoder[user_valid[u][i]])"
+      ],
+      "metadata": {
+        "id": "EagqTPryc6MA",
+        "outputId": "5b0bc779-dc5f-4984-d9e1-bf027e4d9a8a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "18834\n",
+            "10040\n",
+            "15241\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "seq = ([0]*50 + user_train[u] + [make_sequence_dataset.num_items + 1] * config['val_data'])[-50:]"
+      ],
+      "metadata": {
+        "id": "NwKj9n2ZMRbf"
+      },
+      "execution_count": 98,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with torch.no_grad():\n",
+        "    predictions = model(np.array([seq]))"
+      ],
+      "metadata": {
+        "id": "MS5MxQ_YMlVS"
+      },
+      "execution_count": 99,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions = predictions.cpu()"
+      ],
+      "metadata": {
+        "id": "NTIrTOtTMrzP"
+      },
+      "execution_count": 100,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "temp = (-predictions[0][-config[\"val_data\"]:]).argsort(dim=1)[:, :10].numpy()"
+      ],
+      "metadata": {
+        "id": "DLx91M3-MsNi"
+      },
+      "execution_count": 101,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "temp"
+      ],
+      "metadata": {
+        "id": "fsk7GZjYMsG_",
+        "outputId": "1efc9dae-d7af-457f-d781-ff0e9ccdf313",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[32563, 33321, 34299, 13855, 38041, 43942,  3404, 37099, 43256,\n",
+              "         4522],\n",
+              "       [37397,  9067,  9531,   553, 18958, 13029, 21412, 26248, 35046,\n",
+              "         4626],\n",
+              "       [12955, 41583, 11492, 29332, 33749, 26918, 41832,  7679, 32566,\n",
+              "         4627]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 104
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(3):\n",
+        "    for j in range(len(temp)):\n",
+        "        print(make_sequence_dataset.item_decoder[temp[i][j]])"
+      ],
+      "metadata": {
+        "id": "gpaVtI-VSzPg",
+        "outputId": "0ff4a602-7123-4e4c-9267-c99eac1e8a2a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "33178\n",
+            "11737\n",
+            "33414\n",
+            "59306\n",
+            "45980\n",
+            "15947\n",
+            "57208\n",
+            "59573\n",
+            "44278\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "# 6. 모델 저장"
+        "# 7. 모델 저장"
       ],
       "metadata": {
         "id": "tMs0fFNj7Ohq"
@@ -979,7 +1219,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 7. 모델 불러오기"
+        "# 8. 모델 불러오기"
       ],
       "metadata": {
         "id": "AF9S2rdy7dH0"
@@ -1001,7 +1241,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNxJH0xyISeX5JqVxcu2L2J",
+      "authorship_tag": "ABX9TyMvEle+wzDweBxVXOOQqg1M",
       "include_colab_link": true
     },
     "gpuClass": "premium",
