Colaboratory를 통해 생성됨

--- a/models/MF.ipynb
+++ b/models/MF.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1qBY9WErzzXxggssDR6JSg3GLv96dzOvS",
-      "authorship_tag": "ABX9TyMW55Ee1STkBSpWGuW/6Bx3",
+      "authorship_tag": "ABX9TyNMKRjl2/AY53aoUgEnU464",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/hyunj941031/RecSys/blob/main/models/MF.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/hyunj941031/RecSys_for_Fashion_Campus_Dataset/blob/main/models/MF.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -35,10 +35,22 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "IEHke91KhV_6"
+        "id": "IEHke91KhV_6",
+        "outputId": "5bd53b0f-94a1-43d3-b87a-99317cb04fdf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -50,16 +62,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xX4plvyPUAe-",
-        "outputId": "ce0611be-e409-4664-b0b5-2308910a3612"
+        "outputId": "7f9cfffe-4da4-4d2a-aaa3-73c4faf8ab1b"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: python-box in /usr/local/lib/python3.8/dist-packages (7.0.0)\n"
+            "Collecting python-box\n",
+            "  Downloading python_box-7.0.1-cp39-cp39-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (3.2 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.2/3.2 MB\u001b[0m \u001b[31m30.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: python-box\n",
+            "Successfully installed python-box-7.0.1\n"
           ]
         }
       ]
@@ -74,26 +90,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y1JWw0FeTnWR",
-        "outputId": "56deac58-bd35-4248-c1b7-49fa6dd860cf"
+        "outputId": "cff11ac0-0ec7-4bf7-cdfe-0ec6fe0e297c"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: tensorboardX in /usr/local/lib/python3.8/dist-packages (2.6)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.8/dist-packages (from tensorboardX) (1.21.6)\n",
-            "Requirement already satisfied: protobuf<4,>=3.8.0 in /usr/local/lib/python3.8/dist-packages (from tensorboardX) (3.19.6)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.8/dist-packages (from tensorboardX) (23.0)\n"
+            "Collecting tensorboardX\n",
+            "  Downloading tensorboardX-2.6-py2.py3-none-any.whl (114 kB)\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/114.5 KB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m114.5/114.5 KB\u001b[0m \u001b[31m11.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.9/dist-packages (from tensorboardX) (1.22.4)\n",
+            "Requirement already satisfied: packaging in /usr/local/lib/python3.9/dist-packages (from tensorboardX) (23.0)\n",
+            "Requirement already satisfied: protobuf<4,>=3.8.0 in /usr/local/lib/python3.9/dist-packages (from tensorboardX) (3.19.6)\n",
+            "Installing collected packages: tensorboardX\n",
+            "Successfully installed tensorboardX-2.6\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "1CpW4ZeEfCYW"
       },
@@ -107,6 +127,7 @@
         "from collections import defaultdict\n",
         "import os\n",
         "\n",
+        "from sklearn.utils import shuffle\n",
         "import tensorflow as tf\n",
         "from tensorflow.keras.layers import *\n",
         "from tensorflow.keras.models import Model\n",
@@ -160,13 +181,16 @@
       "metadata": {
         "id": "Tey380DAMK7R"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "class MakeSequenceDataSet():\n",
+        "    \"\"\"\n",
+        "    SequenceData 생성\n",
+        "    \"\"\"\n",
         "    def __init__(self, config):\n",
         "        self.config = config\n",
         "        self.df = pd.read_csv(os.path.join(self.config.data_path, 'user_item.csv'), index_col=0)\n",
@@ -177,12 +201,12 @@
         "\n",
         "        self.item_encoder, self.item_decoder = self.generate_encoder_decoder('itemId')\n",
         "        self.user_encoder, self.user_decoder = self.generate_encoder_decoder('userId')\n",
-        "        self.num_item, self.num_user = len(self.item_encoder), len(self.user_encoder)\n",
+        "        self.num_items, self.num_users = len(self.item_encoder), len(self.user_encoder)\n",
         "\n",
         "        self.df['item_idx'] = self.df['itemId'].apply(lambda x : self.item_encoder[x] + 1)\n",
         "        self.df['user_idx'] = self.df['userId'].apply(lambda x : self.user_encoder[x])\n",
-        "        self.df = self.df.sort_values(['user_idx', 'timestamp'])\n",
-        "        self.user_train, self.user_valid = self.split_sequence_data()\n",
+        "        self.df = self.df.sort_values(['user_idx', 'timestamp']) # 시간에 따른 정렬\n",
+        "        self.user_train, self.user_valid = self.generate_sequence_data()\n",
         "\n",
         "\n",
         "    def delete_ones(self):\n",
@@ -204,7 +228,7 @@
         "\n",
         "\n",
         "    def generate_encoder_decoder(self, col:str) -> dict:\n",
-        "                '''\n",
+        "        '''\n",
         "        encoder, decoder 생성\n",
         "\n",
         "        Args:\n",
@@ -223,7 +247,13 @@
         "        return encoder, decoder\n",
         "\n",
         "\n",
-        "    def split_sequence_data(self) -> dict:\n",
+        "    def generate_sequence_data(self) -> dict:\n",
+        "        '''\n",
+        "        sequence data 생성\n",
+        "\n",
+        "        Return:\n",
+        "            dict: train user sequence / valid user sequence\n",
+        "        '''\n",
         "        users = defaultdict(list)\n",
         "        user_train = {}\n",
         "        user_valid = {}\n",
@@ -244,7 +274,7 @@
       "metadata": {
         "id": "n85w6_OFDuxA"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -429,8 +459,8 @@
       "cell_type": "code",
       "source": [
         "class NeuMF:\n",
-        "    def __init__(self, user_num, item_num, latent_features=8):\n",
         "\n",
+        "    def __init__(self, user_num, item_num, latent_features=8):\n",
         "        # Input\n",
         "        user = Input(shape=(1,), dtype='int32')\n",
         "        item = Input(shape=(1,), dtype='int32')\n",
@@ -491,7 +521,7 @@
       "metadata": {
         "id": "wafELJ81Jd9I"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -503,7 +533,16 @@
       "metadata": {
         "id": "gMnnCmReIkl0"
       },
-      "execution_count": null,
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "UMlLD1NYM-LD"
+      },
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -517,7 +556,7 @@
         "\n",
         "print(f'전체 User 수: {num_user}')\n",
         "print(f'전체 Item 수: {num_item}')\n",
-        "print(f'행렬의 희소성: {sparsity:.4f}')"
+        "print(f'행렬의 희소성: {sparsity:.4f}')\n"
       ],
       "metadata": {
         "id": "e0bdcXcWuU4z"
